<resources>
    <string name="app_name">ReadX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="post_graduate_researches">Researchs</string>
    <string name="exams">Exams</string>
    <string name="books">Books</string>
    <string name="graduation_projects">Graduation projects</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_graduation_project_found">No Graduation project found</string>
    <string name="searchbar_hint">Search</string>
    <string name="chip_text_1">Upload Project</string>
    <string name="chip_text_2">Check plagiarism</string>
    <string name="chip_text_3">Project Status</string>
    <string name="projectName">Read x</string>
    <string name="Description">"An application that help to reach to your desirable book easily "</string>
    <string name="Data">1 Nov 2023</string>
    <string name="accepted">Accepted</string>
    <string name="upload_your_team_information">Upload your team information</string>
    <string name="we_didn_t_find_and_plagiarism">We didn\'t find and plagiarism!</string>
    <string name="rejected">Rejected</string>
    <string name="upload_different_idea">Upload different idea</string>
    <string name="_90_match">90% Match</string>
    <string name="author">author</string>
</resources>